--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -238,7 +238,10 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
-                    <!-- INSERT LIST ITEMS HERE -->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/skill_recycler_view"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp" />
 
                 </LinearLayout>
 
@@ -288,7 +291,13 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
-                    <!-- INSERT LIST ITEMS HERE -->
+                    <TextView
+                        android:id="@+id/something"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/lorem_ipsum"
+                        android:textSize="16sp"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
